hphp/hack/test/typecheck/reactive/test_freeze2.php.exp
File "test_freeze2.php", line 24, characters 3-4:
Variable $y is undefined, or there exists at least one control flow path reaching this point which does not define or unsets $y. (Naming[2050])
